--- a/CostaAzul/index.html
+++ b/CostaAzul/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GENE</title>
+  <title>Costa Azul</title>
   <link rel="icon" href="images/Inicio_img.ico">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css" rel="stylesheet" type="text/css" />
   <link href="./css/index.css" rel="stylesheet" type="text/css" />
