--- a/CostaAzul/servicios/estudio-contable.html
+++ b/CostaAzul/servicios/estudio-contable.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GENE</title>
+  <title>Costa Azul</title>
   <link rel="icon" href="../images/Inicio_img.ico">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -17,7 +17,7 @@
   <navbar-component class="h-full w-full" src="../components/navbar/navbar.html" data-color="black">
   </navbar-component>
   <div class="flex justify-between items-center">
-    <h1 class="text-4xl font-bold mx-auto pt-4 underline underline-offset-4 ...">ESTUDIO CONTABLE</h1>
+    <h1 class="text-4xl font-bold mx-auto pt-4 underline underline-offset-4 ...">Ventas de Iluminacion</h1>
 </div>
 
 <div class="hidden md:grid">
